--- a/src/index.html
+++ b/src/index.html
@@ -13,17 +13,17 @@
       <form novalidate>
         <div class="inputs">
           <div class="single-input">
-            <label for="day">DAY</label>
+            <label for="day" id="day-label">DAY</label>
             <input id="day" type="number" name="name" placeholder="DD" required>
             <span class="error"></span>
           </div>
           <div class="single-input">
-            <label for="month">MONTH</label>
+            <label for="month" id="month-label">MONTH</label>
             <input id="month" type="number" name="month" placeholder="MM" required>
             <span class="error"></span>
           </div>
           <div class="single-input">
-            <label for="year">YEAR</label>
+            <label for="year" id="year-label">YEAR</label>
             <input id="year" type="number" name="year" placeholder="YYYY" required>
             <span class="error"></span>
           </div>
